Funny thing, the margin-top on menu_bottom (footer) class was causing flickering at the top of the page, fixed now.

--- a/web/expressRNA.css
+++ b/web/expressRNA.css
@@ -439,9 +439,8 @@ tbody {
 }
 
 .menu_bottom {
-    margin-top: 15px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 0px;
     width: 100%;
     text-align: center;
     vertical-align: middle;
@@ -450,7 +449,6 @@ tbody {
     font-family: "Arial";
     color: #999999;
 }
-
 
 .download_table {
   font-size: 12px;
